<resources>
    <string name="app_name">YMCA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_id">875653462579095</string>
    <string name="action_settings">Settings</string>
    <string name="date">Date</string>
    <string name="instructor">Instructor</string>
    <string name="instructors">Instructors</string>
    <string name="classe">Class</string>
    <string name="classes">Classes</string>
    <string name="schedule">SCHEDULES</string>
    <string name="my_card">MY CARDS</string>
    <string name="location">LOCATIONS</string>
    <string name="program">Programs</string>
    <string name="blog">Blog</string>
    <string name="no_record">No Record Found</string>
    <string name="home">HOME</string>
    <string name="check_in">CHECK-IN</string>
    <string name="announcement">ANNOUNCEMENTS</string>
    <string name="program_register">PROGRAMS/REGISTER</string>
    <string name="event">EVENTS</string>
    <string name="donate">DONATE</string>
    <string name="contact">CONTACT</string>
    <string name="setting">SETTINGS</string>
    <string name="name">NAME</string>
    <string name="code">CODE</string>
    <string name="update_card">UPDATE CARD</string>
    <string name="add_to_calender">Add To Calendar</string>
    <string name="membership_info">MEMBERSHIP INFORMATION</string>
    <string name="progrm_activity">PROGRAMS &amp; ACTIVITIES</string>
    <string name="application">APPLICATION</string>
    <string name="facility">FACILITY STATUS</string>
    <string name="facilits">FACILITY</string>
    <string name="camp">CAMPS</string>

    <string name="custom_primary_font">cachet-std-bold.ttf</string>
    <string name="custom_secondary_font">cachet-std-book.ttf</string>
    <string name="msg_center">Message Center</string>
    <string name="class_description">Class Description</string>
    <string name="add_card">ADD CARD</string>
    <string name="open">Open</string>
    <string name="mon">Mon</string>
    <string name="tue">Tues</string>
    <string name="wed">Wed</string>
    <string name="thus">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="camps">CAMPS</string>
    <string name="descriptn">Description</string>
    <string name="register">Register</string>
    <string name="more_info">More Info</string>
    <string name="ecperience">Experience</string>
    <string name="certification">Certification</string>
    <string name="fun">Fun Fact</string>
    <string name="card_name">CARD NAME</string>
    <string name="enter_number">ENTER BAR CODE NUMBER</string>
    <string name="add_card_text">You can find your card number on the back of your membership card.</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="welcome">WELCOME TO</string>
    <string name="center">CNETER  #01</string>
    <string name="address">ADDRESS</string>
    <string name="iframe_msg">It would be navigate to iFrame.</string>
    <string name="server_error">Server Error</string>
    <string name="please_error"> Please try again later.</string>
    <string name="donate_text">The Y.™ For a better us.™</string>
    <string name="clas_activity"><![CDATA[CLASSES & ACTIVITIES]]></string>
    <string name="clas_activit">Classes &amp; Activities</string>
    <string name="sports">SPORTS LEAGUES</string>
    <string name="event_caln">EVENTS CALENDAR</string>
    <string name="spiring_field">SPRINGFIELD YMCA</string>
    <string name="sponsers"><![CDATA[SPONSORS & PARTNERS]]></string>
    <string name="about_y">ABOUT YOUR Y</string>
    <string name="event_info">Event Info</string>
    <string name="areas">Area</string>

    <string-array name="drawerText">
        <item>@string/membership_info</item>
        <item>@string/home</item>
        <item>@string/check_in</item>
        <item>@string/progrm_activity</item>
        <item>@string/announcement</item>
        <item>@string/program_register</item>
        <item>@string/facility</item>
        <item>@string/camp</item>
        <item>@string/event</item>
        <item>@string/donate</item>
        <item>@string/contact</item>
        <item>@string/application</item>
        <item>@string/setting</item>
    </string-array>

    <!--TODO : Change Siode Navigation 05-08-2016-->
    <string-array name="drawerTextNew">

        <item>@string/membership_info</item>
        <item>@string/home</item>
        <item>@string/check_in</item>
        <item>@string/location</item>
        <item>@string/announcement</item>
        <item>@string/setting</item>

        <item>@string/progrm_activity</item>
        <item>@string/schedule</item>
        <item>@string/program_register</item>
        <item>@string/clas_activity</item>
        <item>@string/camp</item>
        <item>@string/sports</item>
        <item>@string/event_caln</item>

        <item>@string/spiring_field</item>
        <item>@string/donate</item>
        <item>@string/sponsers</item>
        <item>@string/about_y</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="instructor_detail">INSTRUCTOR DETAIL</string>
    <string name="event_map">EVENT LOCATION</string>
    <string name="intensity_level">Intensity Level</string>
    <string name="city_1">DOWNTOWN</string>
    <string name="city_2">KERASOTES</string>
    <string name="instructor_info">Instructor Info</string>
    <string name="trainee">TRAINER</string>
    <string name="delete">Delete</string>
    <string name="notification">Notification</string>
    <string name="setting_text">Employee Login</string>
    <string name="select_location">Select Location</string>
    <string name="reportProb">Report Problem</string>
    <string name="default_loc">Default Location</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_deleted">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="search">Search</string>
</resources>
