<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/check_in" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/announcement" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/program_register" />
        <item
            android:id="@+id/nav_manage1"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/event" />
        <item
            android:id="@+id/nav_manage2"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/donate" />
        <item
            android:id="@+id/nav_manage3"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_manage4"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/program_register" />
        <item
            android:id="@+id/nav_manage5"
            android:icon="@drawable/ic_menu_manage"

            android:title="@string/setting" />

    </group>
</menu>
