<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.ymca.CustomFont.PrimaryFontText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_common_10"
            android:text="@string/location"
            android:textAllCaps="true"
            android:textColor="@color/colorScheduleBottomUnSelect"
            android:textSize="@dimen/text_size_common_22"
            android:textStyle="bold"
            app:fontName="@string/custom_primary_font"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ymca.CustomFont.PrimaryFontText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_record"
            android:textSize="@dimen/text_size_common_22"
            android:textStyle="bold"
            app:fontName="@string/custom_primary_font"/>

        <com.ymca.PullListLoader.XListView
            android:id="@+id/locationListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:smoothScrollbar="true"
            android:dividerHeight="2dp"
            android:divider="@android:color/white"/>


    </RelativeLayout>
</LinearLayout>