<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <com.ymca.CustomFont.PrimaryFontText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_common_10"
        android:text="@string/facilits"
        android:textAllCaps="true"
        android:textColor="@color/colorScheduleBottomUnSelect"
        android:textSize="@dimen/text_size_common_22"
        android:textStyle="bold"
        app:fontName="@string/custom_primary_font" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".97">

        <com.ymca.CustomFont.PrimaryFontText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_record"
            android:textSize="@dimen/text_size_common_22"
            android:textStyle="bold"
            android:visibility="gone"
            app:fontName="@string/custom_primary_font" />

        <com.ymca.PullListLoader.XListView
            android:id="@+id/facilityScheduleListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:dividerHeight="0dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="none"
            android:smoothScrollbar="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".03"
        android:background="@drawable/bottom_img" />
</LinearLayout>