<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_common_10">

        <com.ymca.CustomFont.PrimaryFontText
            android:id="@+id/campDetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_common_5"
            android:text="@string/camps"
            android:textColor="@android:color/black"
            android:textSize="@dimen/margin_common_20"
            android:textStyle="bold"
            app:fontName="@string/custom_primary_font" />

        <com.ymca.CustomFont.PrimaryFontText
            android:id="@+id/campDetailFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_common_5"
            android:text="@string/camps"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_common_16"
            android:textStyle="bold"
            app:fontName="@string/custom_primary_font" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/event_detail_icon"
            android:drawablePadding="@dimen/padding_common_5"
            android:gravity="center"
            android:text="xxxxxxxxx"
            android:textColor="@color/colorScheduleBottomSelect"
            android:textSize="@dimen/text_size_common_14"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <com.ymca.CustomFont.PrimaryFontText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_common_10"
        android:text="@string/descriptn"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_common_18"
        android:textStyle="bold"
        app:fontName="@string/custom_primary_font" />

    <com.ymca.CustomFont.SecondaryFontText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_common_10"
        android:text="@string/descriptn"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_common_14"
        app:fontName="@string/custom_secondary_font" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:weightSum="1"
        android:layout_marginTop="@dimen/margin_common_10">
        <com.ymca.CustomFont.PrimaryFontText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="@dimen/padding_common_10"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"/>
    </LinearLayout>

    <com.ymca.CustomFont.PrimaryFontText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_common_10"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_common_18"
        android:textStyle="bold"
        app:fontName="@string/custom_primary_font" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="1"
        android:layout_marginTop="@dimen/margin_common_10">
        <com.ymca.CustomFont.PrimaryFontText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/register"
            android:textColor="@color/colorScheduleBottomUnSelect"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_common_12"
            android:paddingLeft="@dimen/padding_common_10"/>

    </LinearLayout>

    <com.ymca.CustomFont.PrimaryFontText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_common_10"
        android:text="@string/more_info"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_common_18"
        android:textStyle="bold"
        app:fontName="@string/custom_primary_font" />
    <com.ymca.CustomFont.PrimaryFontText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="abcd@gmail.com"
        android:textColor="@color/colorScheduleBottomUnSelect"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_common_12"
        android:paddingLeft="@dimen/padding_common_10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/bottom_img"/>
    </LinearLayout>
</LinearLayout>