<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.ymca.CustomFont.PrimaryFontText
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_common_10"
            android:text="@string/classes"
            android:textAllCaps="true"
            android:gravity="center_vertical"
            android:textColor="@color/colorScheduleBottomUnSelect"
            android:textSize="@dimen/text_size_common_22"
            android:textStyle="bold"
            app:fontName="@string/custom_primary_font"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/padding_common_10"
            android:weightSum="1"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/schedule_arrow_prev"
                android:id="@+id/prevButton"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_weight=".6">

                <com.ymca.CustomFont.PrimaryFontText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="Sat"
                    android:textSize="@dimen/text_size_common_16"
                    android:layout_weight=".5"
                    android:gravity="center_horizontal|bottom"
                    android:id="@+id/dayTv"
                    android:textStyle="bold"
                    app:fontName="@string/custom_primary_font"
                    />

                <com.ymca.CustomFont.SecondaryFontText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:text="Aug 22"
                    android:textSize="@dimen/text_size_common_14"
                    android:id="@+id/dateTv"
                    android:gravity="top|center_horizontal"
                    app:fontName="@string/custom_secondary_font"/>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/schedule_arrow_next"
                android:id="@+id/forwadButton"/>

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ymca.CustomFont.PrimaryFontText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_record"
            android:textSize="@dimen/text_size_common_22"
            android:textStyle="bold"
            app:fontName="@string/custom_primary_font"/>

        <com.ymca.PullListLoader.XListView
            android:id="@+id/dateScheduleListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:smoothScrollbar="true" />


    </RelativeLayout>
</LinearLayout>